Fix spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -277,6 +277,10 @@ a.simple-link:hover {
   .lead {
     max-width: 30rem;
     line-height: 170%;
+    @media (max-width: 991px) {
+      text-align: justify !important;
+      font-size: 1rem;
+    }
   }
   .logo {
     width: 25rem;
@@ -314,6 +318,8 @@ a.simple-link:hover {
       width: 50%;
       @media (max-width: 991px) {
         width: 100%;
+        text-align: justify !important;
+        font-size: 1rem;
       }
     }
   }
@@ -345,6 +351,8 @@ a.simple-link:hover {
       width: 50%;
       @media (max-width: 991px) {
         width: 100%;
+        text-align: justify !important;
+        font-size: 1rem;
       }
     }
   }
@@ -376,6 +384,8 @@ a.simple-link:hover {
       width: 50%;
       @media (max-width: 991px) {
         width: 100%;
+        text-align: justify !important;
+        font-size: 1rem;
       }
     }
   }
@@ -406,6 +416,8 @@ a.simple-link:hover {
       max-width: 50%;
       @media (max-width: 991px) {
         max-width: 100%;
+        text-align: justify !important;
+        font-size: 1rem;
       }
     }
   }
@@ -450,7 +462,6 @@ a.simple-link:hover {
 .divider-custom.divider-light .divider-custom-icon {
   color: #fff !important;
 }
-
 
 /* ===== PROJECTS ===== */
 
